# Traitement-images_CUDA

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.xlsx  main  main.cu  main3c  main3c.cu  main_kernel.cu  main_kernel.cuh  main_seq_comb.cu  main_shared.cu
CUDA/examples/: 05-errors.cu
CUDA_jp/: .Xauthority  grayscaleTD2.cu  td1.cu  td1.cu.save
CUDA_jp/Projet/: blur_seq.cu
CUDA_jp/TD/: CMakeLists.txt
CUDA_prof/examples/: 01-query.cpp  02-mostbasickernel.cu  05-errors.cu  a.out
Code/: main_seq.cu
Code_bon/kernel/: main.cu
Code_bon/kernel_combinaison/: main_comb.cu
Code_bon/sequentiel/: Makefile  main_seq  main_seq.cu
Code_bon/sequentiel_combinaison/: Makefile  main_seq_comb  main_seq_comb.cu
Code_bon/stream/: Makefile  main_stream.cu
Code_final/kernel/: Makefile  main  main.cu  main_kernel.cu
Code_final/sequentiel/: main_seq.cu
Code_final/shared/: Makefile  main_shared  main_shared.cu
Code_final/shared_stream/: main_shared_stream.cu
Code_final/stream/: Makefile  main_stream  main_stream.cu  stream
Code_test/: main  main_seq_comb
Code_test/kernel/: Makefile  main  main.cu  main_kernel.cu
Code_test/kernel_combinaison/: Makefile  main
Code_test/sequentiel_combinaison/: main_seq_comb.cu
ancien/: main  main.cu  main3c.cu  mainsh  mainsh.cu
dev/: Makefile  main3c  main3c.cu  mainshared  mainshared.cu  mainshared3c  mainshared3c.cu
examples/: 01-streams.cu  Makefile  sobel-fusion2  sobel-fusion2.cu  sobel.cu
jp/: .bash_history  .bashrc  .viminfo  a.out
kernel/: Makefile  main_kernel  main_kernel.cu
sequentiel/: Makefile  main_seq  main_seq.cu
shared/: Makefile  main_shared  main_shared.cu
shared_stream/: Makefile  main_shared_stream  main_shared_stream.cu
stream/: Makefile  main_stream  main_stream.cu
test/: .Makefile.swp  Makefile  Makefile.save  mainshared3c.cu  sobel-fusion2.cu
(+57 files in other folders)
